# APP_GESTION

./: .env.example  .gitignore  .vercelignore  README.md  alembic.ini  iniciar.bat  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_creation_tables_vehicules.py  002_champs_vehicules_itv_journal.py  003_kilometrage_de_base.py  004_table_utilisateurs.py  006_tables_imprimantes.py  (+10 more)
backend/app/: main.py
docs/: architecture.md  authentification.md  module-imprimantes.md  module-ordinateurs.md  module-vehicules.md
docs/integration-module/: 01-vue-ensemble.md  02-analyse-application-hote.md  03-plan-integration.md  04-reference-technique.md  05-scenarios-et-decisions.md  06-verification.md  INTEGRATION-FLORA.exemple.md  PROMPT-CURSOR.md  README.md
scripts/: _check_es_module.py  _check_users_list.py  _compare_ports.py  _debug_nom_header.py  _debug_traductions.py  _dump_users_html.py  _fetch_error_msg.py  _fetch_users_auth.py  _fetch_users_error.py  _fetch_users_page.py  _show_users_rows.py  _test_comptes_ui.py  _test_create_nom.py  _test_erreur_render.py  _test_full_context.py  _test_jinja_nom.py  _test_modifier_page.py  _test_modify_500.py  _test_modify_live.py  _test_modify_live2.py  _test_modify_user.py  _test_nom_app_env.py  _test_nom_label.py  _test_nom_probleme.py  _test_nom_render2.py  _test_router_users.py  _test_users_500.py  _test_users_page.py  _test_users_testclient.py  initialiser_km_demo.py  liberar_puerto.ps1  reinitialiser_journee.py  seed_donnees.py  setup.ps1
static/: sw.js
static/css/: mobile.css  style.css
(+94 files in other folders)
